--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -155,6 +155,9 @@
 - title: Honors and Awards
   type: time_table
   contents:
+    - year: 2024
+      items:
+        - "<a href=\"https://2024.automl.cc/?page_id=1406\">Runner Up for the Best Paper Award at AutoML'24</a>"
     - year: 2022
       items:
         - "<a href=\"https://gecco-2022.sigevo.org/Best-Paper-Nominations\">Won the Best Paper Award at GECCO'22 (GECH track)</a>"
