--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -33,3 +33,11 @@
 "Rajan":
   - firstname: ["Raghu", "R."]
     url: https://ml.informatik.uni-freiburg.de/profile/rajan/
+
+"Awad":
+  - firstname: ["Noor", "N."]
+    url: https://ml.informatik.uni-freiburg.de/profile/awad/
+
+"Dang":
+  - firstname: ["Nguyen", "N."]
+    url: https://www.st-andrews.ac.uk/computer-science/people/nttd/
