ADD Gecco award news :D

--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -167,7 +167,7 @@
   contents:
     - year: 2025
       items:
-        - "<a href=\"https://gecco-2025.sigevo.org/Best-Paper-Nominations\">Nomination for a Best Paper Award at GECCO'25 (L4EC track)</a>"
+        - "<a href=\"https://gecco-2025.sigevo.org/Best-Paper-Nominations\">Best Paper Award at GECCO'25 (L4EC track)</a>"
     - year: 2024
       items:
         - "<a href=\"https://2024.automl.cc/?page_id=1406\">Runner Up for the Best Paper Award at AutoML'24</a>"
